Styled upper bar and first page

--- a/app/src/main/res/layout/activity_postcreation.xml
+++ b/app/src/main/res/layout/activity_postcreation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -26,14 +25,16 @@
             android:layout_height="47dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Post comment"
+            android:hint="Post comment"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="50dp" android:layout_weight="1"/>
+            tools:layout_editor_absoluteY="50dp"
+            android:layout_weight="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_weight="1">
+            android:orientation="horizontal"
+            android:layout_weight="1">
 
             <Button
                 android:id="@+id/action_searchPhoto"
@@ -48,18 +49,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxHeight="50dp"
-                android:maxWidth="50dp"/>
+                android:maxWidth="50dp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/action_savePost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OK" android:layout_weight="1"/>
+            android:text="OK"
+            android:layout_weight="1" />
 
     </LinearLayout>
-
-
 
 
 </android.support.constraint.ConstraintLayout>
