--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,30 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_gradient</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:minWidth">64dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:layout_margin">12dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/colorViolet</item>
+        <item name="android:textColorHint">@color/colorViolet</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_width">280dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:background">@drawable/textinput_border</item>
+    </style>
 </resources>
