--- a/app/src/main/res/drawable/button_gradient.xml
+++ b/app/src/main/res/drawable/button_gradient.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape android:shape="rectangle">
+            <gradient android:startColor="#9c27b0" android:endColor="#673ab7" />
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
 </selector>
