--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="329dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="199dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbarThumbHorizontal="@color/colorViolet"
+        android:scrollbarThumbVertical="@color/colorViolet">
 
         <TextView
             android:id="@+id/fotogramTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/loginHeader"
+            android:layout_marginBottom="29dp"
+            android:layout_centerHorizontal="true"
             android:text="fotogram"
             android:textAlignment="center"
-            android:textSize="30dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.216"
-            android:layout_weight="1" />
+            android:textSize="35dp"
+            android:fontFamily="@font/roboto"
+            android:textStyle="bold"
+            android:textColor="@color/colorFuxia" />
 
         <TextView
             android:id="@+id/loginHeader"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@id/username"
+            android:layout_marginBottom="12dp"
+            android:layout_centerHorizontal="true"
             android:text="Login"
             android:textAlignment="center"
-            tools:layout_editor_absoluteX="175dp"
-            tools:layout_editor_absoluteY="231dp"
-            android:layout_weight="1" />
+            android:fontFamily="@font/roboto"
+            android:textStyle="bold"
+            android:textColor="@color/colorViolet" />
 
         <EditText
             android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            style="@style/EditTextStyle"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="12dp"
             android:ems="10"
             android:hint="Username"
             android:inputType="textPersonName"
-            android:textAlignment="center"
-            tools:layout_editor_absoluteX="99dp"
-            tools:layout_editor_absoluteY="271dp" />
+            android:outlineProvider="bounds"
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
+            style="@style/EditTextStyle"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/username"
+            android:layout_marginBottom="12dp"
             android:hint="Password"
             android:inputType="textPassword"
-            tools:layout_editor_absoluteX="99dp"
-            tools:layout_editor_absoluteY="343dp"
-            android:textAlignment="center"
-            android:layout_weight="1" />
+            android:textAlignment="center" />
 
         <Button
             android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Go!"
-            tools:layout_editor_absoluteX="161dp"
-            tools:layout_editor_absoluteY="450dp" />
+            style="@style/ButtonStyle"
+            android:layout_below="@+id/password"
+            android:layout_centerHorizontal="true"
+            android:text="LOGIN" />
 
         <TextView
             android:id="@+id/register"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_weight="1"
+            android:layout_below="@+id/login"
+            android:layout_centerHorizontal="true"
             android:text=""
-            tools:layout_editor_absoluteX="50dp"
-            tools:layout_editor_absoluteY="450dp" />
+            android:textColorLink="@color/colorViolet" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
