--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,35 +16,49 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_outline_thumb_up_24px"
             android:visibility="invisible"
-            android:onClick="followTheFriend"/>
+            android:onClick="followTheFriend" />
+
         <ImageButton
             android:id="@+id/unfollow_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_outline_thumb_down_24px"
             android:visibility="invisible"
-            android:onClick="unfollowTheFriend"/>
+            android:onClick="unfollowTheFriend" />
+
         <ImageButton
             android:id="@+id/update_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_outline_edit_24px"
             android:visibility="invisible"
-            android:onClick="updateMyPhoto"/>
+            android:onClick="updateMyPhoto" />
+
+        <ImageButton
+            android:id="@+id/action_preferences"
+            android:layout_width="96dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/ic_outline_more_horiz_24px"
+            android:visibility="invisible" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/profileImage"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/profileUsername"/>
+                android:id="@+id/profileUsername" />
 
         </LinearLayout>
 
