--- a/app/src/main/res/layout/activity_showcase.xml
+++ b/app/src/main/res/layout/activity_showcase.xml
@@ -4,47 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="318dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:text="Dashboard"
-                android:textSize="40dp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/showcase_title"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="DASHBOARD"
+            android:textSize="26dp"
+            android:paddingLeft="20dp"
+            android:fontFamily="@font/robotocondensedbold"
+            android:textColor="@color/colorDirtyWhite"
+            android:layout_alignParentTop="true"
+            android:gravity="center_vertical"
+            android:background="@drawable/simple_gradient"
+            android:elevation="3dp" />
 
         <ListView
             android:id="@+id/postsList"
             android:layout_width="match_parent"
-            android:layout_height="486dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/showcase_title"
+            android:layout_above="@id/showcase_bottomMenu" />
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottomNavBar"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@color/cardview_light_background"
-            app:menu="@menu/bottom_menu">
+        <RelativeLayout
+            android:id="@+id/showcase_bottomMenu"
+            style="@style/BottomNavBar"
+            android:background="@drawable/simple_gradient">
 
-        </android.support.design.widget.BottomNavigationView>
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/action_ownProfile"
+                style="@style/BottomMenuItems"
+                app:srcCompat="@drawable/ic_outline_face_24px" />
+
+            <ImageButton
+                android:id="@+id/action_createPost"
+                style="@style/BottomMenuItems"
+                android:layout_toRightOf="@id/action_ownProfile"
+                app:srcCompat="@drawable/ic_outline_add_photo_alternate_24px" />
+
+            <ImageButton
+                android:id="@+id/action_searchFriend"
+                style="@style/BottomMenuItems"
+                android:layout_marginRight="0dp"
+                android:layout_toRightOf="@id/action_createPost"
+                app:srcCompat="@drawable/ic_outline_search_24px" />
+        </RelativeLayout>
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
