--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_ownProfile"
+    <!--<item android:id="@+id/action_ownProfile"
         android:title=""
         android:icon="@drawable/ic_outline_face_24px">
     </item>
@@ -11,5 +11,5 @@
     <item android:id="@+id/action_searchFriend"
         android:title=""
         android:icon="@drawable/ic_outline_search_24px">
-    </item>
+    </item>-->
 </menu>
