--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorFuxia">#9c27b0</color>
     <color name="colorViolet">#673AB7</color>
+    <color name="colorStroke">#9e9e9e</color>
+    <color name="colorDirtyWhite">#eeeeee</color>
+    <color name="colorBlack">#212121</color>
 </resources>
