--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,62 @@
         <item name="android:singleLine">true</item>
         <item name="android:background">@drawable/textinput_border</item>
     </style>
+
+    <style name="CircularFrame" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">@drawable/rounded_button</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <style name="PostListFrame" parent="Widget.AppCompat.ImageButton">
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">250dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:foregroundGravity">center</item>
+    </style>
+    <!--<style name="VioletBorderedButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/white_bordered</item>
+        <item name="android:textColor">@color/colorViolet</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:minWidth">70dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:layout_margin">12dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>-->
+    <style name="BottomMenuItems" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_width">36dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_marginRight">50dp</item>
+        <item name="android:tint">@color/colorDirtyWhite</item>
+    </style>
+
+    <style name="BottomNavBar" parent="TextAppearance.AppCompat">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <style name="PostComment" parent="TextAppearance.AppCompat">
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:fontFamily">@font/robotocondensedbold</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="LeftArrowComment" parent="TextAppearance.AppCompat">
+        <item name="android:drawableLeft">@drawable/ic_outline_chevron_right_24px</item>
+        <item name="android:paddingLeft">10dp</item>
+    </style>
 </resources>
