--- a/app/src/main/res/layout/activity_postcreation.xml
+++ b/app/src/main/res/layout/activity_postcreation.xml
@@ -1,65 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="414dp"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="249dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:text="Create a new post"
-            android:textSize="30dp"
-            tools:layout_editor_absoluteX="81dp"
-            tools:layout_editor_absoluteY="16dp" />
+            android:id="@+id/postcreation_title"
+            android:text="CREATE A NEW POST"
+            style="@style/ActivityTitle" />
 
         <EditText
             android:id="@+id/newPostComment"
-            android:layout_width="411dp"
-            android:layout_height="47dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Post comment"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="50dp"
-            android:layout_weight="1" />
-
-        <LinearLayout
+            android:layout_below="@id/postcreation_title"
+            android:hint="POST COMMENT"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:paddingLeft="20dp"
+            android:layout_margin="10dp"
+            android:inputType="textPersonName"
+            style="@style/EditTextStyle" />
 
-            <Button
-                android:id="@+id/action_searchPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Search a photo"
-                tools:layout_editor_absoluteX="253dp"
-                tools:layout_editor_absoluteY="109dp" />
+        <Button
+            android:id="@+id/action_searchPhoto"
+            style="@style/ButtonStyle"
+            android:text="IMPORT PHOTO"
+            android:layout_below="@id/newPostComment"
+            android:layout_centerHorizontal="true"
+            android:drawableLeft="@drawable/ic_outline_add_photo_alternate_24px"
+            android:drawablePadding="10dp" />
 
-            <ImageView
-                android:id="@+id/loadedImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxHeight="50dp"
-                android:maxWidth="50dp" />
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/loadedImage"
+            android:layout_below="@id/action_searchPhoto"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
 
         <Button
             android:id="@+id/action_savePost"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OK"
-            android:layout_weight="1" />
+            style="@style/ButtonStyle"
+            android:layout_width="100dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/loadedImage"
+            android:text="CREATE" />
 
-    </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/showcase_bottomMenu"
+            style="@style/BottomNavBar"
+            android:background="@drawable/simple_gradient">
+
+            <ImageButton
+                android:id="@+id/action_goBack"
+                style="@style/BottomMenuItems"
+                app:srcCompat="@drawable/ic_round_arrow_back_24px" />
+
+            <ImageButton
+                android:id="@+id/action_ownProfile"
+                style="@style/BottomMenuItems"
+                android:layout_toRightOf="@id/action_goBack"
+                app:srcCompat="@drawable/ic_outline_face_24px" />
+
+            <ImageButton
+                android:id="@+id/action_createPost"
+                style="@style/BottomMenuItems"
+                android:layout_toRightOf="@id/action_ownProfile"
+                app:srcCompat="@drawable/ic_outline_add_photo_alternate_24px" />
+
+            <ImageButton
+                android:id="@+id/action_searchFriend"
+                style="@style/BottomMenuItems"
+                android:layout_marginRight="0dp"
+                android:layout_toRightOf="@id/action_createPost"
+                app:srcCompat="@drawable/ic_outline_search_24px" />
+        </RelativeLayout>
+    </RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
