--- a/app/src/main/res/layout/activity_prefs.xml
+++ b/app/src/main/res/layout/activity_prefs.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/action_logout"
-        android:layout_width="398dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Logout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/postcreation_title"
+            android:text="OPTIONS"
+            style="@style/ActivityTitle" />
+
+        <Button
+            android:id="@+id/action_logout"
+            android:text="LOGOUT"
+            style="@style/ButtonWhiteStyle"
+            android:drawableLeft="@drawable/ic_baseline_exit_to_app_24px"
+            android:drawablePadding="16dp"
+            android:layout_below="@id/postcreation_title"
+            android:drawableTint="@color/colorFuxia" />
+
+        <Button
+            android:id="@+id/action_goback"
+            android:text="RETURN"
+            style="@style/ButtonWhiteStyle"
+            android:drawableLeft="@drawable/ic_round_arrow_back_24px"
+            android:drawablePadding="16dp"
+            android:layout_below="@id/action_logout"
+            android:drawableTint="@color/colorFuxia" />
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
