--- a/app/src/main/res/layout/profile_list_element.xml
+++ b/app/src/main/res/layout/profile_list_element.xml
@@ -28,5 +28,24 @@
             android:id="@+id/profile_postImage"
             android:layout_below="@id/profile_postComment"
             style="@style/PostListFrame" />
+
+        <TextView
+            android:id="@+id/showcase_creationdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/profile_postImage"
+            android:layout_toLeftOf="@id/profile_creationdatevalue"
+            android:text="creation date:"
+            style="@style/CreationDateStyle" />
+
+        <TextView
+            android:id="@+id/profile_creationdatevalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/CreationDateStyle"
+            android:paddingRight="20dp"
+            android:paddingLeft="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/profile_postImage" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
