Added default profile photo when the real one is missing

--- a/app/src/main/res/layout/activity_postcreation.xml
+++ b/app/src/main/res/layout/activity_postcreation.xml
@@ -34,9 +34,9 @@
 
         <ImageView
             android:id="@+id/loadedImage"
-            android:layout_below="@id/action_searchPhoto"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:layout_below="@id/action_searchPhoto" />
 
         <Button
             android:id="@+id/action_savePost"
