--- a/app/src/main/res/layout/posts_list_element.xml
+++ b/app/src/main/res/layout/posts_list_element.xml
@@ -13,8 +13,9 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp" />
+            android:src="@drawable/ic_outline_account_box_24px" />
 
         <TextView
             android:id="@+id/creatorUsername"
